# tfm-endocrine-llm

./: .coverage  .gitignore  CHANGELOG.md  README.md  checkpoint_100.json  checkpoint_1000.json  checkpoint_1050.json  checkpoint_1100.json  checkpoint_1150.json  checkpoint_1200.json  checkpoint_1250.json  checkpoint_1300.json  checkpoint_1350.json  checkpoint_1400.json  checkpoint_1450.json  checkpoint_150.json  checkpoint_1500.json  checkpoint_1550.json  checkpoint_1600.json  checkpoint_1650.json  checkpoint_1700.json  checkpoint_1750.json  checkpoint_1800.json  checkpoint_1850.json  checkpoint_1900.json  checkpoint_1950.json  checkpoint_200.json  checkpoint_2000.json  checkpoint_2050.json  checkpoint_2100.json  checkpoint_2150.json  checkpoint_2200.json  checkpoint_2250.json  checkpoint_2300.json  checkpoint_2350.json  checkpoint_2400.json  checkpoint_2450.json  checkpoint_250.json  checkpoint_2500.json  checkpoint_2550.json  (+54 more)
data/prompts/: prompts_dataset.csv  prompts_dataset_100.csv  prompts_dataset_extendido.csv  verificación_prompts.py
data/results/: phase1_examples.txt  phase1_results.json  phase1_results_simple.csv  phase2_examples.txt  phase2_results.csv  statistical_report.md
data/results/anova_analysis/: anova_summary.csv  anova_table.tex  tukey_distinct_2.csv  tukey_perplexity.csv  tukey_repetition_rate.csv
data/results/consolidated/: all_experiments_consolidated.csv  all_experiments_consolidated.pkl  descriptive_statistics.csv  metadata.json
data/results/correlation_analysis/: correlation_matrix.csv  correlation_pvalues.csv  correlation_table.tex  significant_correlations.csv
data/results/isolated_hormones_analysis/: hormone_effects_summary.csv  isolated_hormones_summary.md  isolated_hormones_table.tex
data/results/semantic_comparison/: comparison_results.csv  comparison_results.json  qualitative_examples.txt
data/results/semantic_comparison/latex/: table_statistical_comparison.tex
data/results_100prompts/: statistical_report.md
data/results_100prompts/anova_analysis/: anova_summary.csv  anova_table.md  anova_table.tex  tukey_distinct_2.csv  tukey_length.csv  tukey_perplexity.csv  tukey_repetition_rate.csv  tukey_sentiment_polarity.csv
data/results_100prompts/consolidated/: all_experiments_consolidated.csv  all_experiments_consolidated.pkl  column_info.csv  descriptive_statistics.csv  metadata.json
data/results_100prompts/correlation_analysis/: correlation_matrix.csv  correlation_pvalues.csv  correlation_table.tex  significant_correlations.csv
data/results_100prompts/dynamic_analysis/: phase4_dynamic_results.csv  static_vs_dynamic_comparison.csv
data/results_100prompts/isolated_hormones_analysis/: hormone_effects_summary.csv  isolated_hormones_summary.md  isolated_hormones_table.tex
data/results_100prompts/phase1/: anova_phase1_results.csv  phase1_examples.txt  phase1_results.csv  phase1_results.json
data/results_100prompts/phase2/: anova_phase2_results.csv  phase2_examples.txt  phase2_results.csv  phase2_results.json
data/results_100prompts/semantic_comparison/: comparison_results.csv  comparison_results.json  qualitative_analysis.txt
data/results_40prompts/: phase1_examples.txt  phase1_results.csv  phase1_results.json  phase2_results.csv  phase4_dynamic_results.csv  statistical_report.md
data/results_40prompts/anova_analysis/: anova_summary.csv  tukey_distinct_2.csv  tukey_length.csv  tukey_perplexity.csv  tukey_repetition_rate.csv
data/results_40prompts/consolidated/: all_experiments_consolidated.csv  column_info.csv  descriptive_statistics.csv  metadata.json
data/results_40prompts/correlation_analysis/: correlation_table.tex
data/results_40prompts/dynamic_analysis/: static_vs_dynamic_comparison.csv
data/results_40prompts/isolated_hormones_analysis/: hormone_effects_summary.csv  isolated_hormones_summary.md
data/results_40prompts/semantic_comparison/: comparison_results.csv  qualitative_analysis.txt
data/results_small_dataset/: phase2_examples.txt  phase2_results.json
data/results_small_dataset/anova_analysis/: anova_table.tex  tukey_sentiment_polarity.csv
data/results_small_dataset/consolidated/: all_experiments_consolidated.pkl
data/results_small_dataset/correlation_analysis/: correlation_matrix.csv  correlation_pvalues.csv  significant_correlations.csv
data/results_small_dataset/isolated_hormones_analysis/: isolated_hormones_table.tex
data/results_small_dataset/semantic_comparison/: comparison_results.json  qualitative_examples.txt
docs/: figures_reference.md  installation.md  semantic_bias_results.md  semantic_experiment_design.md  usage.md  usage_guide.md
docs/experiments/: design_dynamic.md  design_isolated.md  design_phase1.md  design_semantic.md  results_dynamic.md  results_isolated.md  results_phase1.md  results_semantic.md
docs/figures/: figures_guide.md
examples/: 01_basic_demo.ipynb  01_demo_basic.ipynb  01_demo_basico.ipynb  02_demo_isolated.ipynb  02_semantic_comparison.ipynb  02_semantic_demo.ipynb  03_demo_semantic.ipynb  03_dynamic_demo.ipynb  03_semantic_bias_demo.ipynb  04_demo_dynamic_colab.ipynb  04_demo_dynamic_repo.ipynb  04_dynamic_demo.ipynb
scripts/: analyze_dynamic_results.py  anova_complete_analysis.py  anova_phase1_2_results.py  consolidate_all_experiments.py  conversor_latex.py  create_individual_figures.py  create_master_figure.py  create_prompts_dataset.py  create_prompts_dataset_100.py  create_prompts_dataset_extended.py  debug_semantic.py  generate_latex_tables.py  generate_statistical_report.py  hormone_correlation_analysis.py  isolated_hormone_analysis.py  qualitative_comparison.py  quick_analysis.py  quick_check_semantic.py  run_dynamic_experiment.py  run_experiment_phase1.py  run_experiment_phase2.py  run_experiment_semantic.py  run_experiment_semantic_comparison.py  run_semantic_analysis_pipelon.sh  statistical_analysis_semantic.py  visualize_semantic.py
src/endocrine_llm/: __init__.py  core.py  experiment.py  metrics.py  semantic.py  utils.py  visualization.py
tests/: test_core.py  test_experiment.py  test_integration.py  test_metrics.py  test_semantic.py
(+8 files in other folders)
