[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endocrine-llm"
version = "0.5.0"
description = "Sistema de Neuromodulaci칩n Endocrina para LLMs con Modulaci칩n Din치mica"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["llm", "neuromodulation", "hormones", "nlp", "ai", "transformers", "dynamic-systems"]
authors = [
    {name = "Nicola Korff", email = "nicola.korff@example.com"}
]
maintainers = [
    {name = "Nicola Korff", email = "nicola.korff@example.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML
    "torch>=2.4.0",
    "transformers>=4.30.0,<5.0.0",
    
    # Data & Analysis
    "pandas>=2.0.0,<3.0.0",
    "numpy>=2.0.0,<2.3.0",
    "scipy>=1.10.0,<2.0.0",
    
    # Visualization
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    
    # NLP & Metrics
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    "sacrebleu>=2.3.0",
    "rouge-score>=0.1.0",
    
    # Utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# Semantic features (opcional - para sesgos sem치nticos)
semantic = [
    "sentence-transformers>=2.2.0,<3.0.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# Jupyter notebooks
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

# Complete installation (todo incluido)
all = [
    "endocrine-llm[semantic,dev,docs,notebook]",
]

[project.urls]
Homepage = "https://github.com/Nicolakorff/tfm-endocrine-llm"
Documentation = "https://github.com/Nicolakorff/tfm-endocrine-llm#readme"
Repository = "https://github.com/Nicolakorff/tfm-endocrine-llm"
"Bug Tracker" = "https://github.com/Nicolakorff/tfm-endocrine-llm/issues"
Changelog = "https://github.com/Nicolakorff/tfm-endocrine-llm/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["endocrine_llm"]

[tool.setuptools.package-data]
endocrine_llm = ["py.typed"]

# ============================================================================
# Development Tools Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | models
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["endocrine_llm"]
skip = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=endocrine_llm",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["endocrine_llm"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["endocrine_llm"]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "sentence_transformers.*",
    "nltk.*",
    "textblob.*",
]
ignore_missing_imports = true
